# example_code

./: CMakeLists.txt  PITCHME.md  README.md  singleton.cpp
assets/: cmdi.cpp  logic1.cpp  privacy.cpp  sendthread.cpp
docker/: AutoBuild.sh  Dockerfile  README.md  StartDocker.sh
gitpitch/: PITCHME.md
gitpitch/assets/: privacy.cpp  sendthread.cpp
network/: ipcheck.cpp
nostdlib/: custom_lib.c  custom_syscall.c
regex/: ip.cpp
